Designer : Form config reloading