@@ -102,45 +102,28 @@
 	</properties>
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-nosnapshot-plugin</artifactId>
-				<groupId>com.sourcesense.maven</groupId>
-				<version>0.0.6</version>
-				<executions>
-					<execution>
-						<id>default</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>strip</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.0-beta-2</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>create</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<revisionOnScmFailure>1</revisionOnScmFailure>
-					<doCheck>false</doCheck>
-					<doUpdate>false</doUpdate>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+			
+			<!-- proguard -->
+			<!-- <plugin> <groupId>com.pyx4me</groupId> <artifactId>proguard-maven-plugin</artifactId> 
+				<version>2.0.4</version> <executions> <execution> <phase>prepare-package</phase> 
+				<goals> <goal>proguard</goal> </goals> </execution> </executions> <configuration> 
+				<proguardVersion>4.4</proguardVersion> <obfuscate>true</obfuscate> <injar>classes</injar> 
+				<options> <option>-dontoptimize</option> <option>-keepdirectories</option> 
+				<option>-renamesourcefileattribute SourceFile</option> <option>-keepattributes 
+				Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option> 
+				<option>-keep public class * { public protected *;}</option> <option>-keepclassmembernames 
+				class * {java.lang.Class class$(java.lang.String); java.lang.Class class$(java.lang.String, 
+				boolean);}</option> <option>-keepclassmembers enum * {public static **[] 
+				values(); public static ** valueOf(java.lang.String);}</option> <option>-keepclassmembers 
+				class * implements java.io.Serializable { static final long serialVersionUID; 
+				private static final java.io.ObjectStreamField[] serialPersistentFields; 
+				private void writeObject(java.io.ObjectOutputStream); private void readObject(java.io.ObjectInputStream); 
+				java.lang.Object writeReplace(); java.lang.Object readResolve();}</option> 
+				<option>-keep @org.springframework.beans.factory.annotation.Service class 
+				*</option> <option>-keep @org.springframework.stereotype.Controller class 
+				*</option> <option>-keepclassmembers class * { @org.springframework.beans.factory.annotation.Autowired 
+				*; }</option> </options> <libs> <lib>${java.home}/lib/rt.jar</lib> <lib>${java.home}/lib/jsse.jar</lib> 
+				</libs> <addMavenDescriptor>false</addMavenDescriptor> </configuration> </plugin> -->
 			<!-- native2ascii -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -163,52 +146,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<!-- proguard -->
-			<!-- <plugin> <groupId>com.pyx4me</groupId> <artifactId>proguard-maven-plugin</artifactId> 
-				<version>2.0.4</version> <executions> <execution> <phase>prepare-package</phase> 
-				<goals> <goal>proguard</goal> </goals> </execution> </executions> <configuration> 
-				<proguardVersion>4.4</proguardVersion> <obfuscate>true</obfuscate> <injar>classes</injar> 
-				<options> <option>-dontoptimize</option> <option>-keepdirectories</option> 
-				<option>-renamesourcefileattribute SourceFile</option> <option>-keepattributes 
-				Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option> 
-				<option>-keep public class * { public protected *;}</option> <option>-keepclassmembernames 
-				class * {java.lang.Class class$(java.lang.String); java.lang.Class class$(java.lang.String, 
-				boolean);}</option> <option>-keepclassmembers enum * {public static **[] 
-				values(); public static ** valueOf(java.lang.String);}</option> <option>-keepclassmembers 
-				class * implements java.io.Serializable { static final long serialVersionUID; 
-				private static final java.io.ObjectStreamField[] serialPersistentFields; 
-				private void writeObject(java.io.ObjectOutputStream); private void readObject(java.io.ObjectInputStream); 
-				java.lang.Object writeReplace(); java.lang.Object readResolve();}</option> 
-				<option>-keep @org.springframework.beans.factory.annotation.Service class 
-				*</option> <option>-keep @org.springframework.stereotype.Controller class 
-				*</option> <option>-keepclassmembers class * { @org.springframework.beans.factory.annotation.Autowired 
-				*; }</option> </options> <libs> <lib>${java.home}/lib/rt.jar</lib> <lib>${java.home}/lib/jsse.jar</lib> 
-				</libs> <addMavenDescriptor>false</addMavenDescriptor> </configuration> </plugin> -->
-			<plugin>
-				<groupId>org.alfresco.maven.plugin</groupId>
-				<artifactId>maven-amp-plugin</artifactId>
-				<version>3.0.2</version>
-				<extensions>true</extensions>
-				<configuration>
-					<archive>
-						<addMavenDescriptor>false</addMavenDescriptor>
-					</archive>
-					<overlays>
-						<!-- This sample adds records management module in the finally built 
-							AMP <overlay> <groupId>org.org.alfresco</groupId> <artifactId>recordsmanagement</artifactId> 
-							<version>2.1.0</version> <type>amp</type> </overlay> -->
-						<!-- The current AMP is always last in order to overwrite other modules' 
-							modules.properties <overlay></overlay> -->
-					</overlays>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 		<!-- Copies and filters resources in build folder so maven-amp-plugin can 
